--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
-AC_INIT(OPENDROID)
-AM_INIT_AUTOMAKE(OPENDROID)
+AC_INIT(plugins,0.0.1)
+AM_INIT_AUTOMAKE(OPENDROID,0.0.1)
 
 TUXBOX_APPS_DIRECTORY
 
